--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
     integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous">
   </script>
-  
+
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 
   <!--Navbar-->
 
-  
+
   <nav class="navbar navbar-expand-md fixed-top L_menu bg-light shadow">
     <div class="container bg-light">
       <a class="navbar-brand fw-bolder" href="#">SunPage</a>
@@ -63,7 +63,7 @@
             <a class="nav-link" href="#">Kontakt</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn-primary btn" href="#">Porozmawiajmy</a>
+            <a id="bootstrap-overrides" class="nav-link   btn" href="#">Porozmawiajmy</a>
           </li>
         </ul>
       </div>
@@ -73,12 +73,13 @@
 
   <!--Jumbotron-->
   <section class=" overflow-hidden L_Jumbotron">
-    <div class="row  align-items-center g-0 ">
-      <div class="col-md-6 p-5 L_left_side_jumbotron">
-        <div class="L_Jumbotron_lefttext p-5 mx-5">
-          <h1 class="fw-bold mb-3  text-white">Nagłówek traktujący o działalności firmy</h1>
-          <p class="text-white">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
-          <div class="btn btn-primary">Dowiedz się więcej</div>
+    <div class="row align-items-center g-0 ">
+      <div class="col-6 L_left_side_jumbotron">
+        <div class="L_Jumbotron_lefttext mx-auto py-5 w-50">
+          <h1 class="fw-bold text-white">Nagłówek traktujący o działalności firmy</h1>
+          <p class="text-white">But I must explain to you how all this mistaken idea of denouncing pleasure and praising
+            pain was born and I will give you a complete account of the system.</p>
+          <div id="bootstrap-overrides" class="btn  ">Dowiedz się więcej</div>
         </div>
       </div>
       <div id="L_img_Jumbotron" class="R_left_side_jumbotron col-md-6"><img id="L_img_Jumbotron"
@@ -94,7 +95,7 @@
       <div id="L_header" class="text-center">
         <h2 class="display-6 fw-bold text-center ">Nagłówek w kilku słowach</h2>
       </div>
-      <div class="container py-5" >
+      <div class="container py-5">
         <div class="row row-cols-1 row-cols-lg-3">
           <div class="col-md-4">
             <div class="row">
@@ -103,7 +104,8 @@
               </div>
               <div class="col-md-10 L_featured-3">
                 <h2>Nagłówek w kilku słowach</h2>
-                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
+                  born.</p>
               </div>
             </div>
           </div>
@@ -114,7 +116,8 @@
               </div>
               <div class="col-md-10 L_featured-3">
                 <h2>Nagłówek w kilku słowach</h2>
-                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
+                  born.</p>
               </div>
             </div>
           </div>
@@ -125,7 +128,8 @@
               </div>
               <div class="col-md-10 L_featured-3">
                 <h2>Nagłówek w kilku słowach</h2>
-                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
+                  born.</p>
               </div>
             </div>
           </div>
@@ -146,7 +150,7 @@
           <p class="L_featurette-P ">But I must explain to you how all this mistaken idea of denouncing pleasure and
             praising pain was born and I will give you a complete account of the system.</p>
           <a href="#">
-            <div class="L_button">Skontaktuj się z nami</div>
+            <div id="bootstrap-overrides" class="btn  ">Skontaktuj się z nami</div>
           </a>
         </div>
         <div class="col-md-3"></div>
@@ -154,6 +158,7 @@
           <img class="L_about_img rounded-5" src='http://unsplash.it/1000/1000?gravity=center' alt=''>
         </div>
       </div>
+
       <div class="row featurette align-items-center my-5 py-5 ">
         <div class="col-md-5">
           <img class="L_about_img rounded-5" src='http://unsplash.it/1000/1000?gravity=center' alt=''>
@@ -166,7 +171,7 @@
           <p class="featurette-P ">But I must explain to you how all this mistaken idea of denouncing pleasure and
             praising pain was born and I will give you a complete account of the system.</p>
           <a href="#">
-            <div class="L_button">Skontaktuj się z nami</div>
+            <div id="bootstrap-overrides"class="btn  ">Skontaktuj się z nami</div>
           </a>
         </div>
       </div>
@@ -178,7 +183,7 @@
           <p class="featurette-P ">But I must explain to you how all this mistaken idea of denouncing pleasure and
             praising pain was born and I will give you a complete account of the system.</p>
           <a href="#">
-            <div class="L_button">Skontaktuj się z nami</div>
+            <div id="bootstrap-overrides" class="btn">Skontaktuj się z nami</div>
           </a>
         </div>
         <div class="col-md-3"></div>
@@ -188,13 +193,16 @@
       </div>
   </section>
   <!--3-about-->
-  
+
   <!--testimonials-->
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="col-md-5 pt-5 pb-2 mx-auto">
       <h2 class="L_section-h1">Poznaj opinie naszych klientów</h2>
       <i class="fi fi-rr-quote-right"></i>
-      <p class="L_section-p">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system. But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
+      <p class="L_section-p">But I must explain to you how all this mistaken idea of denouncing pleasure and praising
+        pain was born and I will give you a complete account of the system. But I must explain to you how all this
+        mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the
+        system.</p>
     </div>
     <div class="d-flex flex-column bd-highlight mb-3">
       <div class="pb-2 bd-highlight"><img style="width: 50px;" src='https://dummyimage.com/50x50.jpg' alt='' /></div>
@@ -212,7 +220,7 @@
           <h1>Blog</h1>
         </div>
         <div class="col ">
-          <a class="btn-primary btn float-end">
+          <a id="bootstrap-overrides" class="  btn float-end">
             Zobacz więcej
           </a>
         </div>
@@ -255,7 +263,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col">
           <div class="card border-0 shadow-s bg-transparent">
             <div class="card mb-3 shadow-sm L_blog">
@@ -276,18 +284,18 @@
         </div>
 
 
-        </div>
       </div>
     </div>
   </div>
+  </div>
 
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light ">
-    <div class="L_CTA bg-dark h-100 w-75  mx-auto  rounded-3">
+    <div class="L_CTA bg-dark h-100 mx-auto container rounded-3">
       <div class="col-md-5 mx-auto">
         <h1 class="text-white">Przekonujący nagłówek w CTA</h1>
         <p class="text-white">But I must explain to you how all this mistaken idea of denouncing pleasure
           and praising pain was born.</p>
-        <a class="btn btn-primary" href="#">Napisz do nas</a>
+        <a id="bootstrap-overrides" class="btn mx-auto" href="#">Napisz do nas</a>
       </div>
       <div class="product-device shadow-sm d-none d-md-block"></div>
       <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -338,7 +346,7 @@
                   </div>
 
                 </div>
-                <button class="btn btn-primary col-md-4 float-end py-2" submit>Wyślij wiadomość</button>
+                <button id="bootstrap-overrides" class="btn   col-md-4 float-end py-2" submit>Wyślij wiadomość</button>
               </form>
             </div>
 
@@ -346,7 +354,8 @@
 
         </div>
         <div class="col-lg-6 ">
-          <img style="height: 40em;"  class="bg-light rounded-3" src='http://unsplash.it/800/800?gravity=center' alt='' />
+          <img style="height: 40em;" class="bg-light rounded-3 L_contact_img" src='http://unsplash.it/800/800?gravity=center'
+            alt='' />
         </div>
 
       </div>
